# ba_dual_arm

./: README.md
ba_dual_arm_examples/: CMakeLists.txt  package.xml
ba_dual_arm_examples/controller/: robot_controllers.yaml
ba_dual_arm_examples/launch/: a_bot_spin.launch.py  b_bot_spin.launch.py  collision_test.launch.py  eef_align.launch.py  pick_and_place.launch.py
ba_dual_arm_examples/src/: a_bot_spin.cpp  b_bot_spin.cpp  collision_test.cpp  eef_align.cpp  pick_and_place.cpp
niryo_one_description/: CMakeLists.txt  package.xml
niryo_one_description/config/: default_config.rviz
niryo_one_description/launch/: display.launch  start.py  without_mesh_display.launch
niryo_one_description/urdf/: bot.xacro  niryo_one.urdf.xacro  niryo_one_gripper.urdf.xacro  niryo_two.urdf.xacro
niryo_one_moveit_config/: CMakeLists.txt  package.xml
niryo_one_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
niryo_one_moveit_config/launch/: niryo_one_moveit.launch.py
niryo_one_moveit_config/rviz/: view_robot.rviz
niryo_one_moveit_config/srdf/: niryo_two.srdf.xacro
