<?xml version="1.0"?>
<package format="2">
  <name>ba_dual_arm_examples</name>
  <version>1.0.0</version>
  <description>The ba_dual_arm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stooppas@students.zhaw.ch">Pascal Stoop</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>niryo_one_msgs</depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_fake_controller_manager</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  
  <build_depend>rclcpp</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
